--- a/src/variables.scss
+++ b/src/variables.scss
@@ -1,3 +1,8 @@
+/******** TAILWIND DIRECTIVES ********/
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 /******** GENERAL VARIABLES ********/
 $primary-blu: #0182F9;
 $secondary-black: #1C1C1C;
